Fixing alignment of background image

--- a/_sass/mixins/_layout.scss
+++ b/_sass/mixins/_layout.scss
@@ -22,7 +22,7 @@
 @mixin cover-image($image, $height: 100%, $backgroundColor: #333333) {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=$image, sizingMethod='scale');
   -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src=$image, sizingMethod='scale')";
-  background: linear-gradient(to bottom, rgba(0,0,0,0.6) 0px, rgba(0,0,0,0.6) 60px,rgba(0,0,0,0) 120px), url($image) no-repeat center center;
+  background: linear-gradient(to bottom, rgba(0,0,0,0.6) 0px, rgba(0,0,0,0.6) 60px,rgba(0,0,0,0) 120px), url($image) no-repeat left top;
 
   @include cover($background-color, $height);
 }
